refactor(server): clean up STUN TURN relay handling